# serializer version: 1
# name: test_setup_entry[binary_sensor.motion_sensor_0000_10_motion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.motion_sensor_0000_10_motion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Motion',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOTION: 'motion'>,
    'original_icon': None,
    'original_name': 'Motion',
    'platform': 'sunricher_dali',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '02010000106A242121110E_motion',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_entry[binary_sensor.motion_sensor_0000_10_motion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'Motion Sensor 0000-10 Motion',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.motion_sensor_0000_10_motion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_entry[binary_sensor.motion_sensor_0000_10_occupancy-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.motion_sensor_0000_10_occupancy',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Occupancy',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.OCCUPANCY: 'occupancy'>,
    'original_icon': None,
    'original_name': 'Occupancy',
    'platform': 'sunricher_dali',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '02010000106A242121110E_occupancy',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_entry[binary_sensor.motion_sensor_0000_10_occupancy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'occupancy',
      'friendly_name': 'Motion Sensor 0000-10 Occupancy',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.motion_sensor_0000_10_occupancy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
